/*
 * CHANGELOG.
 */

03122005 - Added evil GOTO_*_MACRO_* macros. Fixed unix.c to compile again on
           MacOS X. Added PHYSFS_mount() (thanks, Philip!). Cleaned up the
           INSTALL and CREDITS files a little. Split off start of
           verifySecurity() into a path sanitizer and changed entry points to
           sanitize input paths into a stack-allocated buffer before further
           processing. This removes the need for a malloc() for almost all
           file system operations, and generally cleaned things up. Added a
           "mount" command to test_physfs. Other general cleanups.
02152005 - Minor comment fix in platform/pocketpc.c
01052005 - Fixed HOG archiver file lookup (thanks, Chris!)
12162004 - Fixed some documentation/header comment typos (thanks, Gaetan!)
10302004 - Fixed a strcpy that should have been a strcat. (thanks, Tolga!)
           Build system respects external CFLAGS now. (thanks, Adam!)
           Fixed infinite loop in new enumeration code. (thanks, Adam!)
10062004 - Removed profiling code from physfs.c.
09292004 - Every API that can return a list of strings can now use a
           callback mechanism if the application wants to do it's own
           allocation or handling on a per-item basis. The guts of those
           APIs that create string lists now use the callbacks themselves to
           build the lists, too. The callback functionality goes all the way
           down to the archivers and platform drivers where appropriate, which
           cleans things up and simplifies some internal tasks very nicely.
           Got rid of all the annoying forward declarations in all the
           archivers and moved their PHYSFS_Archiver data to the end of the
           file, since this was annoying me and I was getting sick of updating
           function signatures in two places when the internal API changed.
           Removed the code/data for LinkedStringLists...it isn't used anymore